--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -3,13 +3,15 @@
 
 {% block content %}
     <h1><span>Change Password</span></h1>
-    <section>
-
-<form action="{% url 'password_change' %}" method="post">{% csrf_token %}
-    {% include 'partials/form_as_fieldsets.html' %}
-    <input type="submit" value="Update" />
-      <a href="{% url 'profile' %}" class="buttonize">Cancel</a>
-</form>
-
-	</section>
+    <section id="changepassword">
+        <h2><span>{{ user }}</span></h2>
+        <div class="solobody"><span>
+            <form action="{% url 'password_change' %}" method="post">{% csrf_token %}
+                {% include 'partials/form_as_fieldsets.html' %}
+                <input type="submit" value="Update" />
+                  <a href="{% url 'profile' %}" class="buttonize">Cancel</a>
+            </form>
+        </div>
+    <hr class="close" />
+    </section>
 {% endblock %}
