--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -7,7 +7,7 @@
     <section>
 
 <form action="." method="post">{% csrf_token %}
-{{ form }}
+{% include 'partials/form_as_fieldsets.html' %}
 <input type="submit" />
 <a href="{% url 'password_reset' %}" class="buttonize">Forgot Password?</a>
 </form>
