--- a/shifts/templates/shifts/leaderboard.html
+++ b/shifts/templates/shifts/leaderboard.html
@@ -3,24 +3,20 @@
 {% block body_class %}{{ block.super }} home{% endblock %}
 
 {% block content %}
+<h1><span>Volunteer Leader Board</span></h1>
 <section id="leaderboard">
-  <table>
-    <thead>
-      <tr>
-        <td>Rank</td>
-        <td>Name</td>
-        <td>Hours</td>
-      </tr>
-    </thead>
+  <h2><span>Rank</span></h2>
+  <table class="bodytable">
     <tbody>
       {% for leader in page_obj %}
         <tr>
-          <td>{{ forloop.counter0|add:page_obj.start_index }}</td>
+          <th>{{ forloop.counter0|add:page_obj.start_index }}</th>
           <td>{{ leader }}</td>
-          <td>{{ leader.shift_length_sum }}</td>
+          <td>{{ leader.shift_length_sum }} hours</td>
         </tr>
       {% endfor %}
     </tbody>
   </table>
+  <hr class="close" />
 </section>    
 {% endblock %}
