--- a/volunteer/templates/home.html
+++ b/volunteer/templates/home.html
@@ -19,7 +19,7 @@
                     <p>Here are some things to go do:
                         <ul>
                             <li><a href="{% url 'profile' %}">Edit your profile</a>...</li>
-                            <li><a href="{% url 'shifts' %}">Learn about each department's shift</a>...</li>
+                            <li><a href="{% url 'department_list' %}">Learn about each department's shift</a>...</li>
                             <li><a href="{% url 'shifts' %}">Claim some shifts</a>...</li>
                             <li><a href="{% url 'leaderboard' %}">View the leaderboard</a>...</li>
                         </ul>
