--- a/shifts/templates/shifts/partials/shift_grid.html
+++ b/shifts/templates/shifts/partials/shift_grid.html
@@ -22,7 +22,7 @@
           <input type="text" name="verification_code">
       {{/if}}
       <input type="hidden" name="owner" value="{{owner}}">
-      <button type="submit">{{#if owner}}Cliam{{else}}Release{{/if}} Shift</button>
+      <button type="submit">{{#if owner}}Claim{{else}}Release{{/if}} Shift</button>
       <button type="button" class="cancel">Cancel</button>
   </form>
 </script>
