--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -8,7 +8,7 @@
 
 <form action="." method="post">{% csrf_token %}
 {% include 'partials/form_as_fieldsets.html' %}
-<input type="submit" />
+<input type="submit" value="Login" />
 <a href="{% url 'password_reset' %}" class="buttonize">Forgot Password?</a>
 </form>
 
