--- a/accounts/templates/registration/password_reset_done.html
+++ b/accounts/templates/registration/password_reset_done.html
@@ -5,9 +5,12 @@
     <!-- Add your site or application content here -->
     <h1><span>Password Reset Email Sent</span></h1>
     <section>
-        <p>
-            An email containing a link to reset your password has been sent to
-            your inbox.
-        </p>
+        <p>For security reasons, I can not tell you
+            if the email address you provided really is
+            linked to an account. However, if it is, an 
+            email containing a link to reset your password 
+            has been sent to your inbox.</p>
+        <p>If you do not recieve an email, please try 
+           <a href="{% url 'register' %}">register for an account.</a></p>
     </section>
 {% endblock %}
