--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -5,14 +5,21 @@
     <!-- Add your site or application content here -->
     <h1><span>Password Reset</span></h1>
     <section>
+        <blockquote>
         <p>
             Forgotten your password? Enter your email address below, and we'll
             email instructions for setting a new one.
         </p>
-
+        <p>
+            Please note: You will need to create a new account for
+            2014. We hope this is the last year you need to re-register. 
+        </p>        
+        </blockquote>
         <form action="{% url 'password_reset' %}" method="post">
             {% include 'partials/form_as_fieldsets.html' %}
             <input type="submit" />
         </form>
+
+
     </section>
 {% endblock %}
