--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -55,6 +55,7 @@
                 <a href="{% url 'shifts' %}">ALL Shifts</a> 
                 <a href="{% url 'department_list' %}">Departments</a> 
                 <a href="{% url 'leaderboard' %}">Leader Board</a> 
+                <a href="{% url 'organization_list' %}">Organizations</a> 
             {% endif %}
         </nav>        
         {% block content %}
