add ability to manage your own memberships

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -13,6 +13,7 @@
             </p>
             <a href="{% url 'password_change' %}" class="buttonize">Change Password</a><br />
             <a href="{% url 'profile_edit' %}" class="buttonize">Edit Profile</a>
+            <a href="{% url 'my_organizations' %}" class="buttonize">Manage Organizations</a>
         </span></div>            
         <hr class="close" />
     </section>
