--- a/shifts/templates/shifts/partials/shift_grid.html
+++ b/shifts/templates/shifts/partials/shift_grid.html
@@ -65,7 +65,7 @@
                                         <a id="shift-button-{{ cell.shift.pk }}" 
                                            alt=""
                                            title="{{ cell.shift.department }} @ {{ cell.shift.start_time|date:"l, n/j @ h:ia" }} for {{ cell.shift.shift_length }} hours"
-                                           class="shift-toggle shift-{{ cell.shift.pk }}{% if cell.shift.owner %} claimed-shift{% if user.is_authenticated and user.pk != cell.shift.owner.pk %} locked{% endif %}{% else %} open-shift{% endif %}" 
+                                           class="shift-toggle shift-{{ cell.shift.pk }}{% if cell.shift.owner %} claimed-shift{% if cell.shift.locked or user.pk != cell.shift.owner.pk %} locked{% endif %}{% else %} open-shift{% endif %}" 
                                            href="#" 
                                            data-shift="{{ cell.shift.pk }}" 
                                            data-restricted="{{ cell.shift.requires_code|yesno:'true,false' }}" 
