make /shifts/app/ show the built webapp

--- a/shifts/templates/shifts/app.html
+++ b/shifts/templates/shifts/app.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}<!DOCTYPE html>
 <html>
+  <head><link rel=stylesheet href="{% static 'css/main.css' %}"></head>
   <body>
     <div id="app"></div>
-  </body>
-  <script data-main="js/main" src="{% static 'js/lib/require.js' %}"></script>
+  </body><script data-main="js/main" src="{% static 'js/main.js' %}"></script></body>
 </html>
