--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -1,77 +1,48 @@
 {% load static pipeline %}<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
     <head>
         <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
         <title>{% block page_title %}{% endblock %}</title>
         
-        <meta name="description" content="{% block meta_description %}{% endblock %}" />
-        <meta name="author" content="{% block meta_author %}{% endblock %}" />
         <meta name="viewport" content="width=device-width" />
-        <link rel="stylesheet" href="{% static 'css/normalize.css' %}" />
-        <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-        {% stylesheet 'base' %}
-        {% javascript 'base' %}
 
-        {% block css %}
+        {% stylesheet 'base' %}
+
+        {% block extra_css %}
         {% endblock %}
 
-        {% block javascript %}
+        {% block extra_javascript %}
         {% endblock javascript %}
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
     {% block body %}
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
-        <![endif]-->
-        <nav id="primarynav">
-            <span id="accntnav">
-                {% if user.is_authenticated %}
-                    {% if user.is_admin %}
-                      <a href="/admin">Admin</a>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'site-index' %}">Volunteer Database</a>
+                <ul class="nav navbar-nav">
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'departments' %}">Departments</a></li>
                     {% endif %}
-                    <a href="{% url 'profile' %}">Profile</a>             
-                    <a href="{% url 'logout' %}">logout <span class="above500">{{ user.get_full_name }}</span></a>
-                {% else %}
-                <a href="{% url 'register' %}">Register</a>
-                <a href="{% url 'login' %}">Login</a>
-                {% endif %}
-            </span>
-            <a href="{% url 'home' %}"><span class="above500"><span class="above1000">Super Hero</span> Flaming</span> Art</a> 
-            {% if user.is_authenticated %}
-                <a href="{% url 'shifts' %}">ALL Shifts</a> 
-                <a href="{% url 'department_list' %}">Departments</a> 
-                <a href="{% url 'leaderboard' %}">Leader Board</a> 
-            {% endif %}
-        </nav>        
+                </ul>
+                <ul class="nav navbar-nav pull-right">
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% if user.is_admin %}
+                        <li><p class="navbar-text">|</p></li>
+                        <li><a href="{% url 'admin:index' %}">Admin</a></li>
+                    {% endif %}
+                    {% else %}
+                        <li><a href="{% url 'login' %}">Login</a></li>
+                        <li><a href="{% url 'register' %}">Register</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
         {% block content %}
         {% endblock content %}
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
+        {% javascript 'base' %}
     {% endblock body %}
-
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-2432342-11', 'auto', {
-           'allowLinker': true
-        });
-        ga('send', 'pageview');
-
-    </script>
-
     </body>
 </html>
