Update templates and urls

--- a/volunteer/apps/accounts/templates/registration/password_reset_form.html
+++ b/volunteer/apps/accounts/templates/registration/password_reset_form.html
@@ -1,25 +1,15 @@
-{% extends "base.html" %}
-{% block body_class %}{{ block.super }} home{% endblock %}
+{% extends "layout_skinny.html" %}
 
 {% block content %}
-    <!-- Add your site or application content here -->
-    <h1><span>Password Reset</span></h1>
+    <h1>Password Reset</h1>
     <section>
-        <blockquote>
         <p>
             Forgotten your password? Enter your email address below, and we'll
             email instructions for setting a new one.
         </p>
-        <p>
-            Please note: You will need to create a new account for
-            2014. We hope this is the last year you need to re-register. 
-        </p>        
-        </blockquote>
-        <form action="{% url 'password_reset' %}" method="post">
+        <form action="." method="post">
             {% include 'partials/form_as_fieldsets.html' %}
-            <input type="submit" />
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-
-
     </section>
 {% endblock %}
