--- a/volunteer/apps/accounts/templates/accounts/change_password.html
+++ b/volunteer/apps/accounts/templates/accounts/change_password.html
@@ -1,17 +1,15 @@
-{% extends "base.html" %}
-{% block body_class %}{{ block.super }} home{% endblock %}
+{% extends "layout_skinny.html" %}
 
 {% block content %}
     <h1><span>Change Password</span></h1>
     <section id="changepassword">
-        <h2><span>{{ user }}</span></h2>
-        <div class="solobody"><span>
-            <form action="{% url 'password_change' %}" method="post">{% csrf_token %}
+        <h2>{{ user }}</h2>
+        <div>
+            <form action="." method="post">
                 {% include 'partials/form_as_fieldsets.html' %}
-                <input type="submit" value="Update" />
-                  <a href="{% url 'profile' %}" class="buttonize">Cancel</a>
+                <button class="btn btn-primary" type="submit">Update</button>
+                <a href="{% url 'dashboard' %}" class="btn btn-default">Cancel</a>
             </form>
         </div>
-    <hr class="close" />
     </section>
 {% endblock %}
