--- a/volunteer/apps/accounts/templates/accounts/profile_edit.html
+++ b/volunteer/apps/accounts/templates/accounts/profile_edit.html
@@ -1,18 +1,16 @@
-{% extends "base.html" %}
-{% block body_class %}{{ block.super }} home{% endblock %}
+{% extends "layout_skinny.html" %}
+
 
 {% block content %}
     <h1><span>Edit Profile</span></h1>
     <section id="profile">
         <h2><span>{{ user }}</span></h2>
         <div class="solobody">
-            <form action="{% url 'profile_edit' %}" method="post">{% csrf_token %}
+            <form action="." method="post">
                 {% include 'partials/form_as_fieldsets.html' %}
-                <input type="submit" value="Update" />
-                  <a href="{% url 'profile' %}" class="buttonize">Cancel</a>
+                <button type="submit" class="btn btn-primary">Save</button>
+                <a href="{% url 'dashboard' %}" class="btn btn-default">Cancel</a>
             </form>
         </div>
-    <hr class="close" />
-
 	</section>
 {% endblock %}
