--- a/volunteer/apps/accounts/templates/registration/login.html
+++ b/volunteer/apps/accounts/templates/registration/login.html
@@ -1,16 +1,15 @@
-{% extends "base.html" %}
-{% block body_class %}{{ block.super }} home{% endblock %}
+{% extends "layout_skinny.html" %}
+
 
 {% block content %}
-    <!-- Add your site or application content here -->
     <h1><span>Login</span></h1>
     <section>
 
-<form action="." method="post">{% csrf_token %}
-{% include 'partials/form_as_fieldsets.html' %}
-<input type="submit" value="Login" />
-<a href="{% url 'password_reset' %}" class="buttonize">Forgot Password?</a>
-</form>
+        <form action="." method="post">
+            {% include 'partials/form_as_fieldsets.html' %}
+            <button class="btn btn-primary" type="submit">Login</button>
+            <a href="{% url 'password-reset' %}" class="btn btn-default">Forgot Password?</a>
+        </form>
 
 	</section>
 {% endblock %}
