--- a/volunteer/apps/accounts/templates/registration/password_reset_done.html
+++ b/volunteer/apps/accounts/templates/registration/password_reset_done.html
@@ -1,9 +1,7 @@
-{% extends "base.html" %}
-{% block body_class %}{{ block.super }} home{% endblock %}
+{% extends "layout_skinny.html" %}
 
 {% block content %}
-    <!-- Add your site or application content here -->
-    <h1><span>Password Reset Email Sent</span></h1>
+    <h1>Password Reset Email Sent</h1>
     <section>
         <p>For security reasons, I can not tell you
             if the email address you provided really is
