--- a/volunteer/apps/departments/templates/departments/department_detail.html
+++ b/volunteer/apps/departments/templates/departments/department_detail.html
@@ -1,18 +1,15 @@
-{% extends "base.html" %}
-{% load i18n %}
-{% block body_class %}{{ block.super }} home{% endblock %}
+{% extends "layout_full.html" %}
 
 {% block content %}
     <h1>{{ department }}</h1>
     <section id="department">
         <h2><span>Description</span></h2>
-        <div class="solobody">
         <p>{{ department.description }}</p>
-        </div>
-        <hr class="close" />
     </section>
-    <h1>{{ department }} Shifts</h1>
-{% include 'shifts/partials/shift_grid.html' %}
-
+    {% for role in department.roles.all %}
+        <section id="department">
+            <h2>{{ role }}</h2>
+            <p>{{ role.description }}</p>
+        </section>
+    {% endfor %}
 {% endblock %}
-
