--- a/volunteer/apps/departments/templates/departments/department_list.html
+++ b/volunteer/apps/departments/templates/departments/department_list.html
@@ -1,23 +1,13 @@
-{% extends "base.html" %}
-{% load i18n %}
-{% block body_class %}{{ block.super }} home{% endblock %}
+{% extends "layout_full.html" %}
 
 {% block content %}
-    <!-- Add your site or application content here -->
-    <h1><span>Departmental Structure</span></h1>
+    <h1>Departments</h1>
     <section id="departments">
     	<h2><span>Departments</span></h2>
-      <table class="bodytable">
-      {% for department in object_list %}
-        <tr>
-          <th width="30%"><a href="{% url 'department_detail' pk=department.pk %}">{{ department }}</a></th>
-          <td width="70%">
-              <span class="standard">{{ department.description }}</span>
-          </td>
-        </tr>
-      {% endfor %}
-      </table>
-		<hr class="close" />
+        <ul>
+            {% for department in object_list %}
+                <li><a href="{% url 'department-detail' pk=department.pk %}">{{ department }}</a></li>
+            {% endfor %}
+        </ul>
 	</section>
 {% endblock %}
-
