--- a/volunteer/templates/shift_grid.html
+++ b/volunteer/templates/shift_grid.html
@@ -9,8 +9,8 @@
         <div class="shift-grid">
             <!-- ShiftGridView -->
         </div>
-        <div class="shift-modal">
-            <!-- ShiftModalView -->
+        <div class="cell-modal">
+            <!-- ModalCellView -->
         </div>
     </div>
 {% endblock %}
