--- a/volunteer/static/js/shift-grid/templates/cell_modal_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/cell_modal_template.handlebars
@@ -5,9 +5,9 @@
             <h4 class="modal-title">Shifts at {{ cellTitle }}</h4>
         </div>
         <div class="modal-body">
-            <p>The following shifts are available during this time period.</p>
-            <div class="shifts">
-                <!-- ModalShiftView(s) -->
+            <p>Look, roles and shifts!</p>
+            <div class="roles">
+                <!-- ModalRoleView(s) -->
             </div>
         </div>
         <div class="modal-footer">
