Claiming shifts works

--- a/volunteer/static/js/shift-grid/templates/slot_modal_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/slot_modal_template.handlebars
@@ -1,1 +1,4 @@
 - {{ shift }}:{{ volunteer }}
+{{#if isClaimedByUser }}
+    <button type="button" class="btn btn-warning release-slot">Release Slot</button>
+{{/if}}
