--- a/volunteer/templates/shift_grid.html
+++ b/volunteer/templates/shift_grid.html
@@ -21,11 +21,11 @@
 {{ block.super }}
 <script>
 $(document).ready(function() {
+    window.django_user = new Backbone.Model({{ user|serialized_user|json }});
     var rows = {{ shifts|as_grid|json }};
     window.application = new app.ShiftGridApplication({
         el: $('#role-{{ role.id }}-shift-grid-container'),
-        rows: rows,
-        user: {{ user|serialized_user|json }}
+        rows: rows
     });
     window.application.start();
 });
