--- a/volunteer/static/js/shift-grid/templates/slot_modal_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/slot_modal_template.handlebars
@@ -1,4 +1,4 @@
-- {{ shift }}:{{ volunteer }}
+<strong>{{ volunteer_display_name }}</strong>
 {{#if isClaimedByUser }}
-    <button type="button" class="btn btn-warning release-slot">Release Slot</button>
+    <button type="button" class="btn btn-warning btn-sm release-slot">Release Slot</button>
 {{/if}}
