start on pagination

--- a/volunteer/apps/shifts/templates/shifts/partials/shift_grid.html
+++ b/volunteer/apps/shifts/templates/shifts/partials/shift_grid.html
@@ -1,5 +1,8 @@
-<div class="shift-grid">
-    <!-- ShiftGridView -->
+<div class="shift-grid-pagination">
+    <!-- ShiftGridPaginationView -->
+</div>
+<div class="shift-grid-table">
+    <!-- ShiftGridTableView -->
 </div>
 <div class="cell-modal">
     <!-- ModalCellView -->
